# Home-Assistant-HDMI-PRO-Matrix

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  hacs.json  pyproject.toml  requirements_test.txt
.devcontainer/: devcontainer.json  post-create.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: hacs.yml  hassfest.yml  lint.yml  test.yml
blueprints/automation/gofanco_prophecy/: auto_route_media.yaml  mute_all.yaml  recall_preset.yaml  save_preset.yaml
custom_components/gofanco_prophecy/: __init__.py  button.py  config_flow.py  const.py  coordinator.py  device.py  diagnostics.py  entity.py  icons.json  manifest.json  media_player.py  select.py  services.yaml  strings.json  switch.py  text.py
custom_components/hdmi_switcher/: __init__.py  button.py  config_flow.py  const.py  manifest.json  requirements.txt  switch.py
dashboards/: matrix_grid.yaml  mushroom.yaml  stock.yaml
dev/: .sensor.py.notusedyet  text.py.notused
tests/: __init__.py  conftest.py  test_config_flow.py  test_coordinator.py  test_device.py  test_diagnostics.py  test_init.py  test_media_player.py  test_platforms.py  test_preset.py
